--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ glove.6B.50d.txt
 *.model
 # folder: / means the folder where .gitignore is 
 /data/
-
+transformers/test_save_dataset/
 
 # C extensions
 *.so
